--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,22 @@
 body {
-  background-color: red; }
+  background-color: blue;
+  font-family: luminari; }
+
+.castle {
+  position: relative;
+  height: 5%;
+  width: 100%;
+  text-align: center; }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: blue;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-shadow: 5px 5px 5px red; }
 
 /*# sourceMappingURL=main.css.map */
